// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is a current status "Failed" 1`] = `
<button
  className="ant-btn ant-btn-primary ant-dropdown-trigger status-button"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "background": "red",
    }
  }
  type="button"
>
  <span>
    Failed 
  </span>
  <span
    aria-label="down"
    className="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</button>
`;

exports[`renders correctly when there is a current status "Passed" 1`] = `
<button
  className="ant-btn ant-btn-primary ant-dropdown-trigger status-button"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "background": "green",
    }
  }
  type="button"
>
  <span>
    Passed 
  </span>
  <span
    aria-label="down"
    className="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</button>
`;

exports[`renders correctly when there is a current status "Undefined" 1`] = `
<button
  className="ant-btn ant-btn-primary ant-dropdown-trigger status-button"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "background": "grey",
    }
  }
  type="button"
>
  <span>
    Undefined 
  </span>
  <span
    aria-label="down"
    className="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</button>
`;

exports[`renders correctly when there is a current status 1`] = `
<button
  className="ant-btn ant-btn-primary ant-dropdown-trigger status-button"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "background": "green",
    }
  }
  type="button"
>
  <span>
    Passed 
  </span>
  <span
    aria-label="down"
    className="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</button>
`;

exports[`renders correctly when there is a empty status text 1`] = `
<button
  className="ant-btn ant-btn-primary ant-dropdown-trigger status-button"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "background": undefined,
    }
  }
  type="button"
>
  <span>
     
  </span>
  <span
    aria-label="down"
    className="anticon anticon-down"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="down"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
      />
    </svg>
  </span>
</button>
`;
